Se realizaron los Login y los Logout de la aplicación, faltan algunas validaciones
